--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color:linen
+  background-color:green;
 }
 
 #app {
@@ -19,3 +19,5 @@ body {
   border:2px solid darkolivegreen;
   
 }
+
+
