--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color:green;
+  background-color:lightyellow;
 }
 
 #app {
@@ -20,4 +20,31 @@ body {
   
 }
 
+form {
+  display:flex;
+  flex-wrap:wrap;
+  flex-direction:column;
+  max-width:40%;
+  align-content:center;
+}
 
+.form-group {
+  display:flex;
+  justify-content:space-between;
+  margin:8px;
+  
+
+}
+
+.buttons {
+  display:flex;
+  justify-content:center;
+  gap:20px;
+  margin-bottom:10px;
+
+
+}
+
+.btn-outline-success:hover {
+background-color:green
+}
