can now create and delete an animal '

--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ form {
   flex-direction:column;
   max-width:40%;
   align-content:center;
+  height:450px;
+  margin-left:30%;
+  
 }
 
 .form-group {
