--- a/main.css
+++ b/main.css
@@ -20,11 +20,11 @@ body {
   
 }
 
-form {
+.form {
   display:flex;
-  flex-wrap:wrap;
   flex-direction:column;
-  max-width:40%;
+  
+  
   align-content:center;
 }
 
